--- a/src/App.css
+++ b/src/App.css
@@ -109,8 +109,10 @@ body {
     background-color: #ffffff00;
     border-width: 0 0 3px 0px;
     border-color: var(--gold);
-    /* width: 40px; */
+    width: 110px;
     font-family: "Karla";
     font-size: 1.2rem;
-    margin-left: 5px;
+    font-weight: 600;
+    margin-left: 25px;
+    padding: 0.5rem;
 }
