--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
     --gold: #a67c00;
-    --gold-bg: #ffdc73;
+    --gold-bg: #fed57d;
     --card-color: #ffffffec;
 }
 
@@ -14,7 +14,9 @@
 
 body {
     font-family: "Karla";
+    text-transform: capitalize;
     background-color: var(--gold-bg);
+    height: 100vh;
     padding: 2rem;
     display: flex;
     justify-content: center;
@@ -25,7 +27,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 750px;
+    justify-content: center;
+    width: 47rem;
 }
 
 .app--title {
@@ -111,7 +114,9 @@ body {
 
 .filter--button{
     background-color: #ffffff00;
+    color: var(--gold);
     border-width: 0 0 3px 0px;
+    border-style: solid;
     border-color: var(--gold);
     width: 6.5rem;
     font-family: "Karla";
